# ai-judge-assistant

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.test  README.md  alembic.ini  docker-compose.test.yml  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py  script.py.mako
alembic/versions/: 001_initial.py  002_add_case_ratings.py  003_fix_column_types.py  004_fix_payout_amount_type.py  005_make_financial_cols_not_null.py  006_remove_referral_system.py  007_remove_role_column.py  008_add_user_instructions.py  009_devalue_tokens_div100.py  010_add_chat_history.py  011_add_case_context.py  012_norm_actuality_tracking.py  013_add_chat_history.py  014_add_utm_source.py  015_add_ocr_status.py  016_add_case_billing.py  017_add_last_activity.py  018_add_ab_group.py  019_add_activity_log.py  020_add_user_geo.py  021_add_case_rating.py  022_add_case_runs.py  023_add_active_run_id.py  024_add_usage_json.py  025_add_credited_at.py  026_create_case_upload_sessions.py  027_add_resumable_upload_columns.py  028_add_unique_index_client_file_id.py  029_add_referral_system.py  030_case_content_version_and_assistant_uniqueness.py  031_add_missing_schema_columns.py  032_add_widget_payment_fields.py  033_fix_case_runs_one_active_index.py  66821ad98869_sync_missing_columns.py
app/: clone_test.py  config.py  database.py  main.py  revalidate.py
app/api/: activity.py  admin.py  assistants.py  auth.py  billing.py  cases.py  email.py  internal_widget.py  invites.py  norms.py  referral.py  upload_sessions.py
app/api/helpers/: activity.py  case_access.py  context_lock.py  file_processing.py
app/middleware/: security.py
app/models/: __init__.py
app/prompts/: __init__.py
app/schemas/: __init__.py
app/services/: case_context.py  deepseek.py  docx_export.py  email_otp.py  extract_prompts.py  generate_from_context.py  geoip.py  health_check.py  ingest.py  job_queue.py  learning.py  norm_lookup.py  norm_reviewer.py  norm_validator.py  ocr.py  payment_monitor.py  pdf_converter.py  pipeline.py  redis_stream.py  reference_extractor.py  refine_context.py  sse_contract.py  telegram.py  tochka_payment.py  unisender.py
app/utils/: auth.py  datetime.py  deps.py  rate_limit.py
app/workers/: generation_worker.py  reconciliation.py  recovery_worker.py
deploy/fail2ban/: jail.local
deploy/fail2ban/filter.d/: ai-judge-auth.conf  ai-judge-heavy.conf  ai-judge-ratelimit.conf  ai-judge-scanner.conf
docs/: ARCHITECTURE.md  CASE_STUDY.md  LINTING_SETUP.md  MAP_REDUCE_SPEC.md  security.md  setup_guide.md
frontend/: .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/e2e/: auth.setup.js  playwright.config.js  smoke.spec.js
frontend/src/: App.jsx  api.js  clientLog.js  index.css  main.jsx  ym.js
frontend/src/components/: Layout.jsx  NormHighlight.jsx  ReviewerBadge.jsx  normStatus.js  useNormData.js
frontend/src/hooks/: JudgeContext.jsx  useAuth.jsx  useCaseLifecycle.js  useChunkedUpload.js  usePayment.js
frontend/src/lib/: uploadChunked.js
frontend/src/pages/: AdminPage.jsx  AuthCallback.jsx  BillingPage.jsx  CalculatorsPage.jsx  CasePage.jsx  DaysCalc.jsx  GosposhlinaArbCalc.jsx  GosposhlinaCalc.jsx  Interest395Calc.jsx  LoanCalc.jsx  LoginPage.jsx  NeustoikaCalc.jsx  PeniCalc.jsx  ProfilePage.jsx  ReferralPage.jsx  ZarplataCalc.jsx
frontend/src/pages/admin/: AdminBadges.jsx  AnalyticsTab.jsx  CasesTimeline.jsx  ClientsTab.jsx  DashboardTab.jsx  FeedbacksTab.jsx  PromoCodesTab.jsx  ReferralsTab.jsx
frontend/src/pages/case/: ChatBubbles.jsx  EmailCollectModal.jsx  EmptyPhase.jsx  ErrorPhase.jsx  GeneratingProgress.jsx  PaymentModals.jsx  ProcessingPhase.jsx  RatingBar.jsx  ReadyPhase.jsx  ResultBlock.jsx
tests/: conftest.py  test_api.py  test_new_features.py  test_security.py  test_smoke.py  test_sse_contract.py
